--- a/public/web.config
+++ b/public/web.config
@@ -3,7 +3,7 @@
     Download: https://www.microsoft.com/en-us/download/details.aspx?id=47337
     Debug Help: https://docs.microsoft.com/en-us/iis/extensions/url-rewrite-module/using-failed-request-tracing-to-trace-rewrite-rules
 -->
-<--<configuration>
+<configuration>
   <system.webServer>
     <rewrite>
       <rules>
@@ -25,4 +25,4 @@
       </rules>
     </rewrite>
   </system.webServer>
-</configuration>-->
+</configuration>
